Issue #11241: subclasses of ctypes.Array can now be subclassed.